--- a/TestForum/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TestForum/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
+@using Microsoft.EntityFrameworkCore
 @model RegisterModel
+@inject Microsoft.AspNetCore.Identity.RoleManager<IdentityRole> RoleManager
 @{
     ViewData["Title"] = "Register";
 }
@@ -35,6 +37,16 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <select asp-for="Input.Role" class="form-select" aria-required="true">
+                    @foreach (var role in await RoleManager.Roles.ToListAsync())
+                    {
+                        <option value="@role.Name">@role.Name</option>
+                    }
+                </select>
+                <label asp-for="Input.Role">Role</label>
+                <span asp-validation-for="Input.Role" class="text-danger"></span>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
