Added_admin_premissions

--- a/TestForum/Views/Themes/Index.cshtml
+++ b/TestForum/Views/Themes/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TestForum.Models.Theme>
+﻿@using System.Security.Claims
+@model IEnumerable<TestForum.Models.Theme>
 
 @{
     ViewData["Title"] = "Index";
@@ -12,7 +13,13 @@
 @foreach (var item in Model) {
     <h4>@item.Title</h4>
     <p>@item.Description | Total posts: @item.Posts.Count | Created by: @item.User.Email</p>    
-
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+    @if (User.IsInRole("Admin") || (User.Identity.IsAuthenticated && item.User.Id == User.FindFirstValue(ClaimTypes.NameIdentifier)))
+    {
+        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+    }
+    @if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+    }
 }
