--- a/TestForum/Views/Themes/Details.cshtml
+++ b/TestForum/Views/Themes/Details.cshtml
@@ -8,24 +8,37 @@
     ViewData["Title"] = "Details";
 }
 
-<h3>@Model.Title</h3>
-<p>@Model.Description</p>
-<p>- @Model.User.UserName</p>
+<div class="container d-flex justify-content-between align-items-center">
+    <h2>@Model.Title</h2>
+    <p>Created by: @Model.User.UserName</p>
+</div>
+<div class="container">
+    <p>@Model.Description</p>
+</div>
+<hr />
 
-<h3>Posts</h3>
+<h4>Posts:</h4>
+
 @foreach(var post in Model.Posts)
 {
-    <p>
-        @post.Content - @post.User.Email
-
-        @if (UserManager.GetUserId(User) == post.IdentityUserId || User.IsInRole("Admin"))
-        {
-            <a asp-action="DeletePost" asp-route-id="@post.Id">Delete</a>
-        }
-    </p>
-    <hr />
+    <div class="container bd-purple-200 p-4 myrounded m-3">
+        <div class="row">
+            <div class="col-3 align-self-start">
+                <p><b>@post.User.UserName :</b></p>
+            </div>
+            <div class="col-9 d-flex justify-content-between align-items-end">
+                <p>@post.Content</p>
+                @if (UserManager.GetUserId(User) == post.IdentityUserId || User.IsInRole("Admin"))
+                {
+                    <div class="text-right">
+                        <a class="btn btn-danger" asp-action="DeletePost" asp-route-id="@post.Id">Delete</a>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
 }
-
+<div class="container m-3">
 <form asp-action="AddPost">
     <div class="form-group">
         <textarea name="content" class="form-control"></textarea>
@@ -36,11 +49,15 @@
     <div class="form-group">
         <input type="hidden" name="ThemeId" class="form-control" value="@Model.Id" />
     </div>
+        <div class="container d-flex justify-content-between align-items-center mt-3">
     <div class="form-group">
-        <input type="Submit" class="btn btn-info" value="Submit" />
+                <input type="Submit" class="btn btn-primary" value="Submit" />
     </div>
+        <div>
+                <a class="btn btn-warning" asp-action="Index">Back to List</a>
+        </div>
+        </div>
 </form>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+
 </div>
