--- a/TestForum/Views/Themes/Index.cshtml
+++ b/TestForum/Views/Themes/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using System.Security.Claims
+@using Microsoft.AspNetCore.Identity
 @model PaginatedList<TestForum.Models.Theme>
+@inject UserManager<IdentityUser> UserManager
 
 @{
     ViewData["Title"] = "Index";
@@ -14,7 +16,7 @@
     <div class="container bd-purple-200 p-4 myrounded m-3">
         <div class="container d-flex justify-content-between align-items-center">
             <h4>@item.Title</h4>
-            <p>Created by: @item.User.UserName</p> 
+            <p>Created by: @(item.User.UserName)@(await UserManager.IsInRoleAsync(item.User, "Admin") ? " (Admin)" : "")</p>
         </div>
         <hr />
         <div class="container">
